[package]
name = "mcu_sw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version="0.7", features = ["critical-section-single-core"]}
atsamd-hal = {version="0.21.2", features=["same51j-rt", "rtic", "can", "dma", "async", "defmt"]}
panic-rtt-target = { version = "0.2.0" }
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
mcan = "0.7.0"
rtic = {version = "2.1.2", features=["thumbv7-backend"]}
rtic-monotonics = {version = "2.0.3", features = ["cortex-m-systick"]}
rtic-sync = {version="1.3.2"}
fugit = "0.3.7"
mcan-core = "0.2.2"
w211_can={path="../pc_sw/w211_can"}
defmt = "1.0.1"
defmt-rtt = "1.0.0"
futures = {version="0.3.31", default-features = false}

# For cargo flash
[package.metadata]
chip = "ATSAME51J20A"

[profile.dev]
incremental = false
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
codegen-units = 1
