[package]
name = "mcu_sw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = { version = "0.7.5", features = ["device"] }
cortex-m = {version="0.7", features = ["critical-section-single-core"]}
atsamd-hal = {version = "0.22.2", features=["same51j-rt", "can", "dma", "async", "defmt"]}
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
mcan = "0.7.0"
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
systick-timer = { version = "0.1.3", features = [
    "cortex-m",
    "embassy-time-driver",
] }
embassy-time = { version = "0.4.0", features = ["tick-hz-1_000_000"] }
embassy-time-driver = "0.2.0"
embassy-sync = "0.7.0"
fugit = "0.3.7"
mcan-core = "0.2.2"
w211_can={path="../pc_sw/w211_can"}
defmt = "1.0.1"
defmt-rtt = "1.0.0"
static_cell = "2.1.1"

# For cargo flash
[package.metadata]
chip = "ATSAME51J20A"

[profile.dev]
incremental = false
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = 3
codegen-units = 1
