[package]
name = "daughter_pcb_comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus="0.9.6"
bitflags="1.3.2"
log="0.4.17"
env_logger="0.10.0"
tokio={ version = "1.23.0", features = ["full"] }
futures="0.3.25"
bluer={version="0.15.5", features=["bluetoothd"]}
chrono = "0.4.23"
sysinfo="0.28.0"
input-linux = "0.5.0"
nix="0.26.2"
socketcan = "2.0.0"
socketcan-isotp = "1.0.1"
