[package]
name = "daughter_pcb_comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="agw_lib"
main="src/lib.rs"

[dependencies]
dbus="0.9.6"
bitflags="2.4.1"
log="0.4.17"
env_logger="0.10.0"
tokio={ version = "1.23.0", features = ["full"] }
futures="0.3.25"
bluer={version="0.16.1", features=["bluetoothd"]}
chrono = "0.4.23"
sysinfo="0.29.10"
input-linux = "0.6.0"
nix="0.27.1"
w211_can = { path="../w211_can" }
