[package]
name = "lcp_emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui_extras = {version = "0.27.2", features=["image"]}
tokio = {version = "1.36.0", features=["full"]}
tokio-socketcan = "0.3.1"
futures-util = "0.3.30"
w211_can = { path="../w211_can" }
bitflags = "2.5.0"
ambisonic = "0.4.1"
