[package]
name = "socketcan_ic_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={ version = "1.23.0", features = ["full"] }
clap = { version = "4.4.11", features = ["derive"] }
daughter_pcb_comm={path="../daugher_pcb_comm/"}
eframe="0.24.0"
rand = "0.8.5"
termion = "3.0.0"
