[package]
name = "w211_can_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
serial-rs = {git="https://github.com/rnd-ash/serial-rs"}
socketcan = "2.0.0"
packed_struct="0.10.0"