[package]
name = "w211_can_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
futures-util = "0.3.30"
tokio = {version = "1.36.0", features=["full"]}
tokio-socketcan = "0.3.1"
w211_can = { path="../w211_can" }
tokio-serial = { version = "5.4.4", features = ["libudev"] }
