[package]
name = "w211_can_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
futures-util = "0.3.31"
tokio = {version = "1.44.2", features=["full"]}
tokio-socketcan = "0.3.1"
w211_can = { path="../w211_can", features=["socketcan"] }
tokio-serial = { version = "5.4.5", features = ["libudev"] }
log = "0.4.27"
env_logger = "0.11.8"
rusb = "0.9.4"
