[package]
name = "w211_can"
version = "0.1.0"
edition = "2021"

[dependencies]
packed_struct={version = "0.10.0", optional=true}
tokio-socketcan-isotp ={version =  "0.1.0", optional=true}
tokio-socketcan = {version = "0.3.1", optional=true}

[features]
socketcan=["dep:packed_struct", "dep:tokio-socketcan-isotp", "dep:tokio-socketcan"]